tests/codegen/pass/026-ref-cells.hyg
let a: ref{int} = ref{2 + 2};
let b: ref{int} = a;
a.value <- 2;
assert(b.value = 2)
