tests/codegen/fail/020-tuple-ref.hyg
let t: tuple {string, int, bool} = tuple {"Hello", 40 + 2, true};
let s = t;
s._2 <- 0;
assert(t._2 = 42)
